<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_template_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_title_left"
        android:layout_marginLeft="@dimen/margin_title_left"
        android:layout_marginTop="@dimen/margin_title_top"
        android:layout_marginBottom="@dimen/margin_title_top"
        android:fontFamily="@font/font_sans"
        android:text="@string/template_title"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/fontSize_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_template_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_title_left"
        android:layout_marginLeft="@dimen/margin_title_left"
        android:layout_marginTop="@dimen/margin_title_top"
        android:fontFamily="@font/font_sans"
        android:text="@string/template_icon_select"
        android:textColor="@color/textColorSecondary"
        android:textSize="@dimen/fontSize_key"
        android:contentDescription="@string/all_placeholder_res"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_template_title"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ib_template_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_title_left"
        android:layout_marginLeft="@dimen/margin_title_left"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_title_top"
        android:background="@drawable/background_rectangle_orange"
        app:srcCompat="@drawable/ic_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_template_icon"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_template_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_medium"
        android:fontFamily="@font/font_sans"
        android:hint="@string/template_hint_key"
        android:focusable="true"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/fontSize_value"
        app:layout_constraintBottom_toBottomOf="@id/ib_template_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/ib_template_icon"
        app:layout_constraintTop_toTopOf="@id/ib_template_icon"
        app:layout_constraintVertical_bias="1" />

</androidx.constraintlayout.widget.ConstraintLayout>